# modsynth

./: .gitignore  Doxyfile  LICENSE.md  README.md  example-midi.cpp  example.cpp  meson.build  midi.cpp  midi.hpp  modsynth.cpp  modsynth.hpp
